--- a/src/Projects/Projects.module.css
+++ b/src/Projects/Projects.module.css
@@ -1,8 +1,17 @@
 .container {
-  margin-top: 76px;
+  /* margin-top: 96px; */
+  margin-top: 60px;
+  
   color: var(--color-text);
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  /* max-width: 1200px; */
+  padding: 32px;
+  /* background-color: brown; */
+  /* display: grid;
+  grid-template-columns: repeat(1,2fr);
+  gap: 32px;
+  align-items: start; */
 }
 
 .title {
@@ -19,6 +28,6 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 85px;
   width: 100%;
 }
