--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -4,15 +4,15 @@
     background-color: rgba(12, 12, 12, 0.6);
     border-radius: 15px;
     padding: 73px;
-    margin-top: 129px;
+    margin-top: 20px;
     z-index: 1;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: 7%;
+    margin-right: 7%;
 
 }
 .title{
     color: var(--color-text);
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 700;
     letter-spacing: 1.75px;
     text-transform: uppercase;
@@ -25,13 +25,29 @@
 
 }
 .aboutImage{
-    width: 37%;
+    width: 39%;
+      animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    height: 600px;
+}
+@keyframes floating{
+    0%{
+        transform: translate(0,0px);
+    }
+    50%{
+        transform: translate(0,30px);
+    }
+    100%{
+        transform: translate(0,-0px);
+    }
 }
 .aboutItems{
     color: var(--color-text);
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 30px;
 
 }
 .aboutItem{
@@ -59,7 +75,7 @@
 .aboutItem p{
     font-size: 25px;
 }
-@media screen and(max-width:830px) {
+@media screen and(max-width:630px) {
 .container{
     background-color: transparent;
     padding-left: 0;
@@ -74,7 +90,7 @@
     display: none;
 }
 .aboutItems{
-    margin-top:29px;
+    margin-top:20px;
 
 }
 .aboutItem{
