--- a/src/vars.css
+++ b/src/vars.css
@@ -1,10 +1,10 @@
 :root {
   /* Colours */
-  --color-text: #f8f7f7;
+  --color-text: #7f7a83;
   --color-primary: #bcb257;
-  --color-secondary: #5221ad;
+  --color-secondary: #053e50;
   --color-dark: #0b2447;
-  --color-bg: #6d86c8;
+  --color-bg: #440c72;
 
   /* Fonts */
   --font-roboto: "Roboto";
